# slahser_player

./: .gitignore  README.md  installer.iss  package_inno.ps1  package_offline.ps1
backend/: Cargo.toml
frontend/: pubspec.yaml
frontend/android/: local.properties
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/java/io/flutter/plugins/: GeneratedPluginRegistrant.java
frontend/lib/: content_area.dart  main.dart
frontend/lib/enums/: content_type.dart  playback_state.dart
frontend/lib/models/: app_settings.dart  app_version.dart  music_file.dart  playlist.dart
frontend/lib/pages/: album_detail_page.dart  artist_detail_page.dart  home_page.dart  lyrics_page.dart
frontend/lib/screens/: settings_screen.dart
frontend/lib/services/: audio_player_service.dart  file_service.dart  music_library_service.dart  playlist_service.dart  settings_service.dart  update_service.dart
frontend/lib/theme/: app_theme.dart
frontend/lib/utils/: cache_manager.dart  media_parser.dart  page_transitions.dart
frontend/lib/widgets/: content_area.dart  custom_snack_bar.dart  custom_snackbar.dart  equalizer_dialog.dart  player_controls.dart  playlist_view.dart  settings_panel.dart  sidebar.dart
frontend/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
release/: changelog.md  install_readme.md
